--- a/materialize/materialize.css
+++ b/materialize/materialize.css
@@ -8296,7 +8296,7 @@ input[type=range]::-ms-thumb {
 .slider .slides {
   background-color: #9e9e9e;
   margin: 0;
-  height: 400px;
+  height: 440px;
 }
 
 .slider .slides li {
@@ -8357,7 +8357,7 @@ input[type=range]::-ms-thumb {
 }
 
 .slider .indicators .indicator-item.active {
-  background-color: #4CAF50;
+  background-color: #FF0000;
 }
 
 .carousel {
@@ -8393,7 +8393,7 @@ input[type=range]::-ms-thumb {
 .carousel.carousel-slider .carousel-item {
   width: 100%;
   height: 100%;
-  min-height: 400px;
+  min-height: 440px;
   position: absolute;
   top: 0;
   left: 0;
